--- a/Client/package.json
+++ b/Client/package.json
@@ -1,29 +1,38 @@
 {
   "name": "client",
-  "type": "module",
   "version": "1.0.0",
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
+  "private": "true",
   "presets": [
     "env",
     "react"
   ],
   "dependencies": {
+    "@babel/register": "^7.17.7",
+    "@loadable/component": "^5.15.2",
+    "@loadable/server": "^5.15.2",
     "asynckit": "^0.4.0",
     "axios": "^0.27.2",
     "babel": "^6.23.0",
     "bootstrap": "^5.1.3",
     "classnames": "^2.3.1",
     "combined-stream": "^1.0.8",
+    "css-loader": "^6.7.1",
     "csstype": "^3.1.0",
     "delayed-stream": "^1.0.0",
     "dequal": "^2.0.2",
     "dom-helpers": "^5.2.1",
+    "esm": "^3.2.25",
+    "express": "^4.17.2",
+    "file-loader": "^6.2.0",
     "follow-redirects": "^1.15.1",
     "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "invariant": "^2.2.4",
     "js-tokens": "^4.0.0",
     "jsx": "^0.9.89",
+    "less-loader": "^11.0.0",
     "loose-envify": "^1.4.0",
     "mime-db": "^1.52.0",
     "mime-types": "^2.1.35",
@@ -36,21 +45,58 @@
     "react-is": "^16.13.1",
     "react-jsx": "^1.0.0",
     "react-lifecycles-compat": "^3.0.4",
+    "react-scripts": "^5.0.1",
     "react-transition-group": "^4.4.2",
     "regenerator-runtime": "^0.13.9",
     "scheduler": "^0.23.0",
+    "style-loader": "^3.3.1",
     "uncontrollable": "^7.2.1",
-    "warning": "^4.0.3"
+    "warning": "^4.0.3",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  },
+  "babel": {
+    "plugins": [
+      "@loadable/babel-plugin"
+    ],
+    "presets": [
+      "@babel/preset-react"
+    ]
   },
   "scripts": {
-    "build": "babel src -d lib",
-    "start": "node ./src/index.js"
+    "dev": "webpack serve",
+    "build": "webpack",
+    "start": "react-scripts start"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "@babel/cli": "^7.18.6",
-    "@babel/core": "^7.18.6"
+    "@babel/core": "^7.18.6",
+    "@babel/plugin-proposal-class-properties": "^7.12.1",
+    "@babel/plugin-proposal-object-rest-spread": "^7.12.1",
+    "@babel/plugin-transform-arrow-functions": "^7.12.1",
+    "@babel/plugin-transform-async-to-generator": "^7.12.1",
+    "@babel/plugin-transform-runtime": "^7.18.5",
+    "@babel/preset-env": "^7.18.2",
+    "@babel/preset-react": "^7.16.7",
+    "@loadable/babel-plugin": "^5.13.2",
+    "@loadable/webpack-plugin": "^5.15.2",
+    "babel-loader": "^8.2.5",
+    "babel-minify": "^0.5.1",
+    "babel-preset-minify": "^0.5.1"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
